Guess-The-Word-V1

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@ Guess The Word | Главная
                     <span class="px-1">·</span>
                     <a href="#" class="link-secondary">All releases</a>
                     <span class="px-1">·</span>
-                    <a href="https://t.me/MarselleNaz" class="link-secondary text-nowrap">Author</a>
+                    <a href="https://t.me/AdikPy" class="link-secondary text-nowrap">Author</a>
                 </p>
 
             </div>
